--- a/정리.md
+++ b/정리.md
@@ -25,3 +25,18 @@ git pull
 
 # github거 들고오기
 git clone (git 주소)
+
+# html 태그
+ol ordered list
+ul unordered list
+a href="" / "#id" hyperlink
+p 문단
+h1 ... h6 제목
+div
+header / main / footer / nav / article / section  의미를 가진 div
+img src 이미지 첨부
+strong 굵게
+br 개행
+
+# html 속성
+id="" 중복 X
