--- a/정리.md
+++ b/정리.md
@@ -28,15 +28,49 @@ git clone (git 주소)
 
 # html 태그
 ol ordered list
+
 ul unordered list
+
 a href="" / "#id" hyperlink
+
 p 문단
+
 h1 ... h6 제목
+
 div
+
 header / main / footer / nav / article / section  의미를 가진 div
+
 img src 이미지 첨부
+
 strong 굵게
+
 br 개행
 
 # html 속성
 id="" 중복 X
+
+class="" 중복 O
+
+# CSS 적용법
+인라인CSS적용
+
+style속성
+
+내부 css사용
+
+head에서 style 태그 사용
+
+외부 css파일 사용
+
+<link rel="stylesheet" type="text/css" href="css파일위치">
+
+selector { property : value;}
+
+selector가 class면 .class id면 #id 전체는 * 속성은 태그[속성=값] / [속성]
+
+자식 요소 nav > ul
+
+후손 요소 nav ul
+
+형제 요소 nav ~ ul
