--- a/정리.md
+++ b/정리.md
@@ -74,3 +74,21 @@ selector가 class면 .class id면 #id 전체는 * 속성은 태그[속성=값] /
 후손 요소 nav ul
 
 형제 요소 nav ~ ul
+
+box-sizing: border-box; 여백 전부 크기에 포함
+
+display 인라인 <-> 블럭 판정 변경
+
+웹폰트 사용 https://fonts.google.com/
+
+https://cdnjs.com/libraries/font-awesome
+
+https://fontawesome.com/search
+
+가운데 정렬
+
+display: flex;
+
+justify-content: center;
+
+align-items: center;
